@@ -4,6 +4,7 @@ remctl_command
 remctl_commandv
 remctl_error
 remctl_new
+remctl_noop
 remctl_open
 remctl_output
 remctl_result_free
